base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-demo
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: quarkus-demo
    weight: 100
  wildcardPolicy: None
